--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.12.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
