--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.2.0",
     "cookie-parser": "~1.4.4",
+    "dateformat": "^4.5.1",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
@@ -32,6 +33,9 @@
     "passport-local": "^1.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.6.0",
+    "query-string": "^7.0.0",
+    "querystring": "^0.2.1",
+    "sha256": "^0.2.0",
     "sweetalert2": "^11.0.0"
   },
   "devDependencies": {
