--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17",
+    "nodeml": "^0.4.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "paypal-rest-sdk": "^1.8.1",
