--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.12.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17",
     "nodeml": "^0.4.0",
