--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
 
 DB= "mongodb+srv://aanhoaa:oycBwM0eXwdnIInP@cluster0.w6qqn.mongodb.net/shop?retryWrites=true&w=majority"
 PORT: "3000"
+CLOUDNAME: "do3we3jk1"
+APIKEY: 554259798325127
+APISECRET: "EidUs6TZ54dIS1HRxdurHuQS4hw"
+
+/*VNPAY*/
+TMNCODE: 'BVMA539M'
+SECRETKEY: 'sdasdasdas12312s'
+RETURNURL: 'http://localhost:3000/checkout/vnpay/returnUrl'
+SIGNATUTETOKEN: 'secretascsoeamsFAssdultra'
+
+/*EMAIL*/
+USERNAME: "johndoestv4@gmail.com"
+PASSWORD: "19903005"
