--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APISECRET= "EidUs6TZ54dIS1HRxdurHuQS4hw"
 
 TMNCODE= 'BVMA539M'
 SECRETKEY= 'sdasdasdas12312s'
-RETURNURL= 'http://localhost:3000/checkout/vnpay/returnUrl'
+RETURNURL= 'https://funiture-app.herokuapp.com/checkout/vnpay/returnUrl'
 SIGNATUTETOKEN= 'secretascsoeamsFAssdultra'
 
 USERNAMEMAILER= "johndoestv4@gmail.com"
