--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APISECRET= "EidUs6TZ54dIS1HRxdurHuQS4hw"
 TMNCODE= 'BVMA539M'
 SECRETKEY= 'sdasdasdas12312s'
 RETURNURL= 'https://funiture-app.herokuapp.com/checkout/vnpay/returnUrl'
-SIGNATUTETOKEN= 'secretascsoeamsFAssdultra'
+SIGNATURETOKEN= 'secretascsoeamsFAssdultra'
 
 USERNAMEMAILER= "johndoestv4@gmail.com"
 PASSWORDMAILER= "19903005"
