--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.1",
+    "compute-cosine-similarity": "^1.0.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.2.0",
@@ -27,6 +28,7 @@
     "fastest-validator": "^1.11.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mathjs": "^9.4.3",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.10",
     "morgan": "~1.9.1",
