--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-DB= "mongodb+srv://aanhoaa:oycBwM0eXwdnIInP@cluster0.w6qqn.mongodb.net/shop?retryWrites=true&w=majority"
+DB= "mongodb+srv://aanhoaa:QIlEu1ccgee3efdV@cluster0.w6qqn.mongodb.net/shop?retryWrites=true&w=majority"
 PORT= "3000"
 CLOUDNAME= "do3we3jk1"
 APIKEY= 554259798325127
